--- a/main.css
+++ b/main.css
@@ -3,3 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+nav{
+  display: flex;
+  justify-content: center;
+  background-color: aqua;
+  padding: 20px;
+   
+    
+   
+}
+ul{
+    list-style: none;
+    display: flex;
+    gap: 10px;
+    margin-right: 10px;
+}
